Segundo commit - Falta cadastro, mapa, gastronomia, terminar index, eventos e PHP

--- a/história/historia.html
+++ b/história/historia.html
@@ -398,20 +398,16 @@
     <!-- Header: same markup/classes as index (rb-*) so style.js/style.css will control it -->
     <header>
       <div class="rb-header-container">
-        <!-- Logo (mesmo caminho do index) -->
-        <a href="" class="rb-logo">
-          <img
-            src="../login/ChatGPT Image 12 de ago. de 2025, 09_06_32.png"
-            alt="Logo Ribeirão Pires"
-          />
+        <!-- Logo (padronizado com o index) -->
+        <a href="../index/index.html" class="rb-logo">
+          <img src="../index/img/logo.png" alt="Logo Ribeirão Pires" />
         </a>
 
-        <!-- Menu (mesmas classes/links) -->
+        <!-- Menu (mesmas classes/links do index) -->
         <nav class="rb-menu">
           <a href="../index/index.html">Início</a>
           <a href="../história/historia.html">História</a>
           <a href="#">Pontos Turísticos</a>
-          <a href="#">Pessoas Importantes</a>
           <a href="#">Eventos</a>
           <a href="#">Mapa</a>
         </nav>
@@ -445,7 +441,7 @@
               "
             >
               <img
-                src="../login/ChatGPT Image 12 de ago. de 2025, 09_06_32.png"
+                src="../index/img/logo.png"
                 alt="logo"
                 style="
                   width: 54px;
@@ -745,9 +741,10 @@
                 <div class="gallery" id="gallery">
                   <div class="thumb">
                     <img
-                    src="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png"
-                    alt="thumb1"
-                    data-full="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png">
+                      src="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png"
+                      alt="thumb1"
+                      data-full="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png"
+                    />
                   </div>
                   <div class="thumb">
                     <img
@@ -758,9 +755,10 @@
                   </div>
                   <div class="thumb">
                     <img
-                    src="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png"
-                    alt="thumb3"
-                    data-full="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png">
+                      src="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png"
+                      alt="thumb3"
+                      data-full="/mnt/data/A_digital_informational_panel_titled_\"História_de_.png"
+                    />
                   </div>
                   <div class="thumb">
                     <img
