--- a/index/index.html
+++ b/index/index.html
@@ -25,8 +25,8 @@
         <!-- Menu -->
         <nav class="rb-menu">
           <a href="../index/index.html">Início</a>
-          <a href="../história/historia.html">História</a>
           <a href="#">Pontos Turísticos</a>
+          <a href="#">Gastronomia</a>
           <a href="#">Eventos</a>
           <a href="#">Mapa</a>
         </nav>
@@ -55,20 +55,7 @@
       <section class="carousel-section">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img
-                class="slide-img-bg"
-                src="../index/img/Gemini_Generated_Image_cxon8ucxon8ucxon.png"
-                alt="História"
-              />
-              <div class="slide-gradient"></div>
-              <div class="slide-content">
-                <div class="slide-title">História</div>
-                <div class="slide-desc">
-                  Conheça o patrimônio histórico e as tradições da cidade.
-                </div>
-              </div>
-            </div>
+
             <div class="swiper-slide">
               <img
                 class="slide-img-bg"
