--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
-    <link rel="stylesheet" href="css/style_cadastro.css" />
+    <link rel="stylesheet" href="./css/style_cadastro.css" />
   </head>
   <body>
     <div class="container">
@@ -57,6 +57,6 @@
       </div>
     </div>
 
-    <script src="js/script_cadastro.js"></script>
+    <script src="./js/script_cadastro.js"></script>
   </body>
 </html>
