Terceiro commit - Falta cadastro, mapa, gastronomia, eventos e PHP

--- a/index/index.html
+++ b/index/index.html
@@ -25,7 +25,7 @@
         <!-- Menu -->
         <nav class="rb-menu">
           <a href="../index/index.html">Início</a>
-          <a href="#">Pontos Turísticos</a>
+          <a href="../Página Túristica/pag.html">Pontos Turísticos</a>
           <a href="#">Gastronomia</a>
           <a href="#">Eventos</a>
           <a href="#">Mapa</a>
