--- a/login/login.html
+++ b/login/login.html
@@ -7,12 +7,13 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Nunito:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../header-styles.css" />
   </head>
   <body>
     <header>
     <div class="rb-header-container">
       <!-- Logo -->
-      <a href="#" class="rb-logo">
+      <a href="../index/index.html" class="rb-logo">
         <img src="../img/logo.png" height="50px" width="50px" alt="Logo Ribeirão Pires">
       </a>
       <!-- Menu ADICIONADO AQUI -->
