Sexto commit - falta terminar onepage, PHP e funcionalidade

--- a/Página Túristica/pag.html
+++ b/Página Túristica/pag.html
@@ -322,14 +322,14 @@
       <!-- Menu ADICIONADO AQUI -->
       <nav class="rb-menu">
         <a href="../index/index.html">Início</a>
-        <a href="#">Pontos Turísticos</a>
+        <a href="../Página Túristica/pag.html">Pontos Turísticos</a>
         <a href="#">Gastronomia</a>
         <a href="#">Eventos</a>
         <a href="#">Mapa</a>
       </nav>
       <!-- Login -->
       <div class="rb-login">
-        <a href="#" class="rb-signin-btn">SIGN IN</a>
+        <a href="#" class="rb-signin-btn">LOG IN</a>
       </div>
       <!-- Mobile menu button -->
       <button class="rb-menu-btn" aria-label="Menu">&#9776;</button>
