--- a/index/index.html
+++ b/index/index.html
@@ -13,19 +13,19 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
     <!-- Arquivo de estilos externo -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./header-styles.css" />
   </head>
   <body>
     <header>
       <div class="rb-header-container">
         <!-- Logo -->
         <a href="#" class="rb-logo">
-          <img src="../img/logo.png" alt="Logo Ribeirão Pires" />
+          <img src="./img/logo.png" alt="Logo Ribeirão Pires" />
         </a>
         <!-- Menu -->
         <nav class="rb-menu">
-          <a href="../index/index.html">Início</a>
-          <a href="../Página Túristica/pag.html">Pontos Turísticos</a>
+          <a href="./index/index.html">Início</a>
+          <a href="./Página Túristica/pag.html">Pontos Turísticos</a>
           <a href="#">Gastronomia</a>
           <a href="#">Eventos</a>
           <a href="#">Mapa</a>
