Sexto commit --- falta terminar onepage, PHP e funcionalidade

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="./header-styles.css" />
+    <link rel="shortcut icon" href="./img/logo-removebg-preview.ico" />
     <style>
       /* Reset & base */
       * {
@@ -364,8 +365,7 @@
               <div class="slide-content">
                 <div class="slide-title">Gastronomia</div>
                 <div class="slide-desc">
-                  Sabores típicos e culinária regional: viva experiências
-                  únicas.
+                  Sabores extraordinários: viva experiências únicas.
                 </div>
               </div>
             </div>
@@ -412,8 +412,13 @@
             <div class="card-body">
               <h3>Parque oriental</h3>
               <p>
-                Descrição breve do ponto turístico. Dê destaque às principais
-                atrações e horários.
+                O Parque Oriental Milton Marinho de Moraes é um espaço de lazer
+                e contemplação com temática japonesa em Ribeirão Pires, à beira
+                da Represa Billings. O Parque Oriental em Ribeirão Pires, com
+                entrada gratuita (terça a domingo, 8h às 17h), destaca-se pelo
+                Jardim Japonês/Zen, pela escultura do Dragão Kinryo e por ser o
+                ponto de embarque para a Torre de Miroku (passeio pago e
+                agendado).
               </p>
             </div>
           </article>
@@ -422,8 +427,9 @@
             <div class="card-body">
               <h3>Torre de Miroku</h3>
               <p>
-                Descrição breve do ponto turístico. Informações de acesso e
-                recomendações.
+                O maior templo japonês do Brasil. A visita à Torre é paga,
+                agendada (Sábados/Domingos/Feriados) e depende da navegabilidade
+                da Represa Billings.
               </p>
             </div>
           </article>
@@ -432,8 +438,9 @@
             <div class="card-body">
               <h3>Vila do doce</h3>
               <p>
-                Descrição breve do ponto turístico. Sugestões de roteiro e dicas
-                locais.
+                A Vila do Doce é um complexo gastronômico central em Ribeirão
+                Pires, com quiosques de doces, lanches e artesanato, ideal para
+                passeios em família.
               </p>
             </div>
           </article>
@@ -452,21 +459,39 @@
             <img src="img/restaurante.jpg" alt="Canoa Quebrada" />
             <div class="card-body">
               <h3>Canoa Quebrada</h3>
-              <p>Sabores locais e pratos típicos. Horário e contato.</p>
+              <p>
+                O Canoa Quebrada é um tradicional restaurante e pizza bar em
+                Ribeirão Pires/SP (Rua Miguel Prisco, 240, Centro). É um
+                estabelecimento com mais de 30 anos de história, famoso por seu
+                cardápio diversificado que inclui Pizzas, pratos com Peixes e
+                Camarões e opções de carnes. Segunda a Quinta-feira: Das 18h às
+                23h. E sextas-feiras e Sábados: Até a meia-noite (00h). O
+                contato principal é (11) 4828-6745 ou (11) 99623-2000..
+              </p>
             </div>
-          </article>    
+          </article>
           <article class="card">
             <img src="img/dcarvalhos.jpg" alt="D'Carvalhos " />
             <div class="card-body">
               <h3>D'Carvalhos Bar</h3>
-              <p>Sabores locais e pratos típicos. Horário e contato.</p>
+              <p>
+                Destaque para a culinária nordestina (Jabá, Baião de Dois,
+                Feijoada) em um ambiente de bar/restaurante. Funciona de Terça a
+                Domingo a partir das 11h/12h e fecha as 00.
+              </p>
             </div>
-          </article> 
+          </article>
           <article class="card">
             <img src="img/bardovado.png" alt="Bar do Vado" />
             <div class="card-body">
               <h3>Bar do Vado</h3>
-              <p>Especialidades regionais e ambiente acolhedor.</p>
+              <p>
+                O Bar do Vado é um estabelecimento popular em Ribeirão Pires.
+                Seu foco principal é a culinária de bar tradicional. É
+                recomendado entrar em contato pelo WhatsApp (11) 99002-7652 para
+                confirmar o horário de funcionamento, que é variável e focado
+                principalmente no período noturno e, em alguns dias, no almoço.
+              </p>
             </div>
           </article>
         </div>
@@ -479,13 +504,25 @@
           <article class="card">
             <div style="padding: 16px">
               <h3>Festa da Cidade</h3>
-              <p>Data, local e descrição curta do evento.</p>
+              <p>
+                O Festival do Chocolate de Ribeirão Pires é um grande evento
+                cultural e gastronômico que ocorre tipicamente durante o mês de
+                agosto. o festival oferece shows gratuitos de artistas
+                nacionais, apresentações culturais e uma vasta vila gastronômica
+                dedicada a pratos e inovações feitos com chocolate. A entrada
+                costuma ser solidária (com doação opcional de alimentos ou
+                ração).
+              </p>
             </div>
           </article>
           <article class="card">
             <div style="padding: 16px">
               <h3>Feira Local</h3>
-              <p>Artesanato, gastronomia e música ao vivo.</p>
+              <p>
+                As feiras de Ribeirão Pires combinam artesanato, gastronomia e,
+                em eventos especiais, música ao vivo. A principal feira de
+                artesanato ocorre no Parque Oriental (Sex a Dom, 8h-16h).
+              </p>
             </div>
           </article>
         </div>
@@ -493,11 +530,11 @@
 
       <!-- MAPA -->
       <section id="mapa" class="content-section" aria-label="Mapa">
-        <h2 style="text-align: center; margin-bottom: 16px">Mapa & Roteiros</h2>
+        <h2 style="text-align: center; margin-bottom: 16px">Mapa</h2>
         <div class="card" style="padding: 12px">
           <!-- If you have an embeddable map, replace the iframe src -->
           <iframe
-            src="https://www.google.com/maps"
+            src="https://www.google.com/maps/d/embed?mid=141ZqRT1Yx_iSgL_eFT9VjqFMRiipvqs&ehbc=2E312F"
             style="width: 100%; height: 360px; border: 0; border-radius: 8px"
           ></iframe>
         </div>
@@ -510,9 +547,62 @@
         </h2>
         <div class="card" style="padding: 16px">
           <p style="line-height: 1.6; color: #444">
-            Breve relato histórico sobre a cidade. (Aqui você pode colar o
-            conteúdo da página "história" do repositório para manter o texto
-            original.)
+            📜 História de Ribeirão Pires Ribeirão Pires, uma cidade vibrante na
+            Região Metropolitana de São Paulo, possui uma história rica que
+            remonta aos tempos coloniais. Seu desenvolvimento está intimamente
+            ligado à exploração do interior paulista e, mais tarde, à chegada da
+            ferrovia. 🏞️ Primeiros Tempos e Origens O território que hoje
+            compreende Ribeirão Pires era originalmente habitado por povos
+            indígenas. A ocupação pelos colonizadores portugueses começou nos
+            séculos XVII e XVIII, com a abertura de caminhos ligando o litoral
+            ao planalto, como o Caminho do Mar.
+            <br />
+            A localidade recebeu seu nome em homenagem a uma das famílias
+            pioneiras da região, os Pires, que se estabeleceram nas margens de
+            um curso d'água, o Ribeirão Pires. Por muito tempo, a área foi uma
+            pequena parada ou povoado rural, dedicada principalmente à
+            agricultura de subsistência e ao fornecimento de lenha e carvão
+            vegetal para a crescente cidade de São Paulo.
+            <br /><br />
+            🚂 O Impulso da Ferrovia O verdadeiro marco para o crescimento e a
+            emancipação de Ribeirão Pires foi a construção da ferrovia São Paulo
+            Railway (SPR), inaugurada em 1867. A SPR, que ligava Santos a
+            Jundiaí, passava pelo atual território da cidade, e a instalação de
+            uma estação ferroviária na década de 1880 impulsionou o povoamento.
+            <br />
+            A estação ferroviária atraiu novos moradores e facilitou o
+            escoamento de produtos. A partir desse momento, Ribeirão Pires
+            deixou de ser apenas um lugarejo e começou a ganhar ares de núcleo
+            urbano.
+            <br /><br />
+            🏗️ Desenvolvimento e Emancipação Com a chegada de imigrantes,
+            especialmente italianos, no final do século XIX e início do século
+            XX, a economia local se diversificou. Indústrias modestas começaram
+            a surgir, e o crescimento populacional levou à organização social e
+            política.
+            <br />
+            Ribeirão Pires pertencia, inicialmente, a Santo André (antigo
+            município de São Bernardo). No entanto, o desejo de autonomia e a
+            distância da sede municipal motivaram um forte movimento
+            emancipacionista.
+            <br />
+            1944: O distrito de Ribeirão Pires é criado, desmembrando-se de
+            Santo André.
+            <br />
+            1953: A cidade conquista sua emancipação político-administrativa,
+            tornando-se um município independente. O aniversário da cidade é
+            comemorado em 19 de março, data da instalação do município.
+            <br /><br />
+            💎 A Estância Turística e o Presente Com seu clima ameno e sua área
+            em grande parte preservada da Mata Atlântica, Ribeirão Pires foi
+            elevada à categoria de Estância Turística em 1998. Este título
+            reconheceu seu potencial turístico, especialmente em torno da
+            Represa Billings e do Mirante Santo Antônio.
+            <br />
+            Hoje, Ribeirão Pires é conhecida por manter um equilíbrio entre o
+            desenvolvimento urbano e a preservação ambiental, oferecendo
+            qualidade de vida aos seus cidadãos e atraindo visitantes
+            interessados em ecoturismo e em sua rica história.
           </p>
         </div>
       </section>
