--- a/login/login.html
+++ b/login/login.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Nunito:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="login.css" />
     <link rel="stylesheet" href="../header-styles.css" />
+    <link rel="stylesheet" href="../img/logo.png" />
   </head>
   <body>
     <header>
